shallowsize-plugin/src/test/resources/org/jub/kotlin/compiler/code-gen/fir/box/silly/MoreSilly.kt
package org.jub.kotlin.compiler.`code-gen`.fir.box.silly

data class MoreSilly(val a: Double) {
    fun <!FUNCTION_EXISTS!>shallowSize<!>() = a
}